--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@ image: meta-preview.png
 </h2>
 
 <p>
-  <em>As of July 7, I am busy with a backlog of freelance work and interviews.</em>
+  <em>As of July 14, I am extremely busy with a backlog of freelance work and interviews.</em>
 </p>
 
 <p>
-  Within the next few weeks, I will soon be available to apply for full time paid work in devrel or webdev. The best way to get in touch with me is thru Twitter DMs. You can also send an email to <yeet>hi</yeet> at <yeet>this domain</yeet>! (No recruiters, thanks!)
+  In the future, I may be interested in applying for full time paid work in devrel or webdev. The best way to get in touch with me is thru Twitter DMs. You can also send an email to <yeet>hi</yeet> at <yeet>this domain</yeet>! (No recruiters, thanks!)
 </p>
 
 <hr>
