--- a/index.html
+++ b/index.html
@@ -128,4 +128,8 @@ image: meta-preview.png
   This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" rel="noreferrer" class="uno">livestream</a>!
 </p>
 
+<p>
+  Public <a href="https://sapphic-squid-vampires.glitch.me/" target="_blank" rel="noreferrer" class="uno">pageview counters</a> are used with respect to do not track preferences.
+</p>
+
 <br>
