--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@ image: meta-preview.png
 </h2>
 
 <p>
-  <em>As of July 14, I am extremely busy with a backlog of freelance work and interviews.</em>
+  You can keep track of my availability, what I'm working on, and events I'll attending on my Notion page:
 </p>
 
 <p>
-  In the future, I may be interested in applying for full time paid work in devrel or webdev. The best way to get in touch with me is thru Twitter DMs. You can also send an email to <yeet>hi</yeet> at <yeet>this domain</yeet>! (No recruiters, thanks!)
+  <a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">Melody on Notion →</a>
 </p>
 
 <hr>
