--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ image: meta-preview.png
 </p>
 
 <p>
-  Love what I do? You can support me by buying me a taco on <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer"><img role="presentation" src="https://ko-fi.com/favicon.png" height="12" width="12" /> Ko-Fi</a>, or gain a sneak peek at my work by subscribing via <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"><img role="presentation" src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a>!
+  Love what I do? You can support me by buying me a taco on <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer"><img role="presentation" src="https://ko-fi.com/favicon.png" height="12" width="12" /> Ko-Fi</a>, or subscribing via <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"><img role="presentation" src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a>. I'm also $pixely on cash app!
 </p>
 
 <h2>
