small content changes

--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@ image: meta-preview.png
 </h2>
 
 <p>
-  Nice to meet you! I'm a 🦄 web unicorn, 🍵 tea witch, 🥑 advotaco!
-  <br>
-  My pronouns are <a class="uno" href="/they">plural they/them</a>.
+  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are <a class="uno" href="/they">plural they/them</a> or she/her.
 </p>
 
 <p>
@@ -106,12 +104,12 @@ image: meta-preview.png
   <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>,
   <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> Dribbble</a>,
   <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>, and
-    <a class="uno" href="https://github.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>.
+  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>.
 </p>
 
 <p>
-  Love what I do? You can support me by buying me a taco on <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer"><img role="presentation" src="https://ko-fi.com/favicon.png" height="12" width="12" /> Ko-Fi</a>, or subscribing via <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"><img role="presentation" src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a>. I'm also $pixely on cash app!
-</p>
+  Love what I do? Support me on <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>, <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cash App</a>, Monzo, or by subscribing via <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"> Patreon</a>.
+</p> 
 
 <h2>
   {% include icons/briefcase.svg size="38" %}
