--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@ image: meta-preview.png
 </p>
 
 <p>
-  Love what I do? Support me on <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>, <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cash App</a>, Monzo, or by subscribing via <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"> Patreon</a>.
+  Love what I do? Support me thru my 
+  <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cash App</a>,
+  <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>,
+  Monzo,
+  <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR?ref_=wl_share" target="_blank" rel="noreferrer">Amazon Wish List</a>,
+  or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"> Patreon</a>! 💖
 </p> 
 
 <h2>
