--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ image: meta-preview.png
 </h2>
 
 <p>
-  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are <a class="uno" href="/they">plural they/them</a> or she/her.
+  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are <a class="uno" href="/they">plural they/them</a>. 🌈
 </p>
 
 <p>
@@ -108,12 +108,13 @@ image: meta-preview.png
 </p>
 
 <p>
-  Love what I do? Support me thru my 
+  Love what I do? Support me thru 
   <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cash App</a>,
   <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>,
-  Monzo,
-  <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR?ref_=wl_share" target="_blank" rel="noreferrer">Amazon Wish List</a>,
-  or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"> Patreon</a>! 💖
+  <a class="uno" href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fvcard.vcf" target="_blank" rel="noreferrer">Monzo</a>,
+  or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer">Patreon</a>!
+  <br>
+  I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR?ref_=wl_share" target="_blank" rel="noreferrer">Amazon Wish List</a>. 💖
 </p> 
 
 <h2>
