--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ image: meta-preview.png
 </p> -->
 
 <p>
-  <strong>There's more:</strong> check out my extended <a href="/websites" class="uno">websites</a> and <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> design</a> portfolios!
+  <strong>There's more:</strong> check out my extended <a href="/websites" class="uno">websites</a> and <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-dribbble.svg" height="14" width="14" /> design</a> portfolios!
 </p>
 
 <hr>
@@ -101,10 +101,10 @@ image: meta-preview.png
 
 <p>
   You can find me on
-  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>,
-  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> Dribbble</a>,
-  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>, and
-  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>.
+  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-twitter.svg" height="14" width="14" /> Twitter</a>,
+  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-dribbble.svg" height="14" width="14" /> Dribbble</a>,
+  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><img role="presentation" src="https://static.twitchcdn.net/assets/favicon-32-d6025c14e900565d6177.png" height="14" width="14" /> Twitch</a>, and
+  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-github-000.svg" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-github-fff.svg" class="visible-theme-dark" height="14" width="14" /> GitHub</a>.
 </p>
 
 <p>
@@ -114,7 +114,7 @@ image: meta-preview.png
   <a class="uno" href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fvcard.vcf" target="_blank" rel="noreferrer">Monzo</a>,
   or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer">Patreon</a>!
   <br>
-  I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR?ref_=wl_share" target="_blank" rel="noreferrer">Amazon Wish List</a>. 💖
+  I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR" target="_blank" rel="noreferrer">Amazon Wish List</a>. 💖
 </p> 
 
 <h2>
@@ -127,13 +127,13 @@ image: meta-preview.png
 </p>
 
 <p>
-  <a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">Melody on Notion →</a>
+  <a href="https://notion.melody.dev/" class="button uno" target="_blank" rel="noreferrer">📓 Melody on Notion →</a>
 </p>
 
 <hr>
 
 <p>
-  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" rel="noreferrer" class="uno">livestream</a>!
+  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-github-000.svg" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="httphttps://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-github-fff.svg" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://youtu.be/ZjjpLvy4bYg" target="_blank" rel="noreferrer" class="uno">livestream</a>!
 </p>
 
 <p>
