--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ image: meta-preview.png
 </p> -->
 
 <p>
-  <strong>There's more:</strong> check out my extended <a href="/websites" class="uno">websites</a> and <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-dribbble.svg" height="14" width="14" /> design</a> portfolios!
+  <strong>There's more:</strong> check out my extended <a href="/websites" class="uno">🌎 websites</a> and <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-dribbble.svg" height="14" width="14" /> design</a> portfolios!
 </p>
 
 <hr>
@@ -96,7 +96,7 @@ image: meta-preview.png
 </h2>
 
 <p>
-  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are <a class="uno" href="/they">plural they/them</a>. 🌈
+  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are <a class="uno" href="/they">plural they/them</a>. ✨
 </p>
 
 <p>
@@ -114,7 +114,7 @@ image: meta-preview.png
   <a class="uno" href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fvcard.vcf" target="_blank" rel="noreferrer">Monzo</a>,
   or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer">Patreon</a>!
   <br>
-  I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR" target="_blank" rel="noreferrer">Amazon Wish List</a>. 💖
+  I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR" target="_blank" rel="noreferrer">Amazon Wish List</a>. Your support means a lot to me! 💜
 </p> 
 
 <h2>
