--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ image: meta-preview.png
 
 {% assign sorted_posts = site.posts | sort: "tile.order" %}
 
-<!-- <style>
+<style>
 {% capture tiles_style %}
 @import "variables";
 @import "mixins";
@@ -48,7 +48,7 @@ image: meta-preview.png
   }
 {% endunless %}{% endunless %}{% endfor %}{% endcapture %}
 {{ tiles_style | scssify }}
-</style> -->
+</style>
 
 <tiles class="posts">
   {% for post in sorted_posts %}{% unless post.hidden %}{% unless post.tile.order < 0 %}
