update my shizzle for the github newsletter

--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@ image: meta-preview.png
 
 <p>
   Love what I do? Support me thru 
-  <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cash App</a>,
+  <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cashapp</a>,
   <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>,
-  <a class="uno" href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fvcard.vcf" target="_blank" rel="noreferrer">Monzo</a>,
   or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer">Patreon</a>!
   <br>
   I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR" target="_blank" rel="noreferrer">Amazon Wish List</a>. Your support means a lot to me! 💜
