move meta preview images to glitch

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Made by Melody"
 layout: page
-image: meta-preview.png
+image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/index-meta-preview.png
 ---
 
 <h1 id="welcome">
