update donation links, etc

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/index-meta-pr
 </h2>
 
 <p>
-  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are <a class="uno" href="/they">plural they/them</a>. ✨
+  Nice to meet you!! I'm Melody: 🍵 sparkly tea witch, 🚆 transit nerd, 🌮 taco advocate, and 🦄 web unicorn. My pronouns are they/them. ✨
 </p>
 
 <p>
@@ -109,11 +109,10 @@ image: https://cdn.glitch.com/d3e253ff-871d-442c-988d-a70ce0de1dc3/index-meta-pr
 
 <p>
   Love what I do? Support me thru 
-  <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cashapp</a>,
-  <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>,
-  or <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer">Patreon</a>!
+  <a class="uno" href="https://cash.app/$pixely" target="_blank" rel="noreferrer">Cashapp</a> and
+  <a class="uno" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer">Ko-Fi</a>!
   <br>
-  I also got an <a class="uno" href="https://www.amazon.com/hz/wishlist/ls/1WZCG3ZSOCGUR" target="_blank" rel="noreferrer">Amazon Wish List</a>. Your support means a lot to me! 💜
+  Your support means a lot to me! 💜
 </p> 
 
 <h2>
